Fix map issues on low zoom levels (#458)