@@ -10,10 +10,9 @@ public class GoogleCoordUtils {
 	public static final int TILE_SIZE = 256;
 
 	private GoogleCoordUtils() {
-
 	}
 	
-	public static LatLon llFromP(Point2D p, double zoom) {
+	public static LatLon latLonFromPoint(Point2D p, double zoom) {
 		double scale = Math.pow(2, zoom);
 		
 		Point2D pixelCoordinate = new Point2D(
@@ -24,14 +23,14 @@ public class GoogleCoordUtils {
 		
 	}
 
-	public static Point2D createInfoWindowContent(LatLon latLng, double zoom) {
+	public static Point2D latLonToPoint(LatLon latLng, double zoom) {
 		double scale = Math.pow(2, zoom);
 
 		Point2D worldCoordinate = project(latLng);
 
 		Point2D pixelCoordinate = new Point2D(
-			Math.floor(worldCoordinate.getX() * scale),
-			Math.floor(worldCoordinate.getY() * scale));
+			worldCoordinate.getX() * scale,
+			worldCoordinate.getY() * scale);
 
 		return pixelCoordinate;
 	}
@@ -43,9 +42,10 @@ public class GoogleCoordUtils {
 
 		// Truncating to 0.9999 effectively limits latitude to 89.189. This is
 		// about a third of a tile past the edge of the world tile.
-		siny = Math.min(Math.max(siny, -0.9999), 0.9999);
+		siny = Math.clamp(siny, -0.9999, 0.9999);
 
-		return new Point2D(TILE_SIZE * (0.5 + latLng.getLonDgr() / 360),
+		return new Point2D(
+				TILE_SIZE * (0.5 + latLng.getLonDgr() / 360),
 				TILE_SIZE * (0.5 - Math.log((1 + siny) / (1 - siny)) / (4 * Math.PI)));
 	}
 	
